--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <form id="addTaskForm">
             <!-- Task Name input -->
             <div class="mb-3">
-              <label for="taskName" class="form-label">Task Name *</label>
+              <label for="taskName" class="form-label">Task Name (*)</label>
               <input type="text" class="form-control" id="taskName" required placeholder="Enter task name">
             </div>
             
@@ -152,7 +152,7 @@
             
             <!-- Task Priority input -->
             <div class="mb-3">
-              <label for="taskPriority" class="form-label">Priority (0-5)</label>
+              <label for="taskPriority" class="form-label">Priority (0-5) (Optional)</label>
               <input type="number" class="form-control" id="taskPriority" min="0" max="5" value="0">
               <small class="form-text text-muted">0 is lowest priority, 5 is highest priority</small>
             </div>
@@ -210,7 +210,7 @@
       <!-- Copyright notice -->
       <hr>
       <div class="text-center">
-        <small>&copy; 2024 Copyright: MyPlanner</small>
+        <small>&copy; 2025 Copyright: MyPlanner</small>
       </div>
     </div>
   </footer>
